# con_compsp1-

./: README.md
SP1_mejoras/: CMakeLists.txt  CMakeLists.txt~  bb.csv  bb0.csv  colorcitos.csv  gg0.csv  mat_de_adj.csv  mat_de_adj0.csv  rr.csv  rr0.csv
SP1_mejoras/src/: main.cpp  mainfunc.cpp
